Improve openAPI spec
